--- a/css/styles.css
+++ b/css/styles.css
@@ -291,34 +291,19 @@ ul {
 /* Doing---------- */
 
 .section-doing {
-  padding-bottom: 120px;
-}
-.section-doing-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  text-align: center;
-  letter-spacing: 0.02em;
-  color: var(--basic-color);
-  margin-bottom: 72px;
-}
-.section-doing-list {
-  display: flex;
-  justify-content: space-between;
-}
-.section-doing-item {
-  width: 360px;
-}
-.section-doing-img {
+  display: none;
 }
 
 /* Team-------- */
-
+.section-team > .container {
+  max-width: 290px;
+}
 .section-team {
   background-color: var(--btn-background-color);
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 128px;
 }
+
 .section-team-title {
   font-size: 36px;
   line-height: 1.11;
@@ -329,17 +314,17 @@ ul {
 }
 .section-team-list {
   display: flex;
+  flex-wrap: wrap;
   text-align: center;
-  justify-content: space-between;
+  gap: 72px;
 }
 .section-team-item {
   background-color: var(--white-color);
-  width: calc((100% - 72px) / 4);
+  width: 100%;
+
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-}
-.section-team-img {
 }
 .section-team-suntitle {
   font-weight: 500;
@@ -382,14 +367,12 @@ ul {
 .section-team-icon-link:focus {
   background-color: var(--btn-hover-color);
 }
-section-team-icon {
-}
 
 /* Customers------ */
 
 .section-customers {
-  padding-top: 130px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .section-customers-title {
@@ -403,10 +386,11 @@ section-team-icon {
 }
 .section-customers-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  gap: 72px 16px;
 }
 .section-customers-item {
-  width: calc((100% - 120px) / 6);
+  width: calc((100% - 16px) / 2);
   height: 88px;
 }
 .section-customers-link {
@@ -937,12 +921,37 @@ textarea {
     min-width: 496px;
     margin-bottom: 40px;
   }
+  .section-team > .container {
+    max-width: 582px;
+  }
+  .section-team-list {
+    gap: 64px 24px;
+  }
+
+  .section-team-item {
+    width: calc((100% - 24px) / 2);
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1158px;
   }
+
+  .section-hero {
+    padding-top: 188px;
+    padding-bottom: 188px;
+    min-width: 1440px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
+  }
+  .section-hero-title {
+    margin-bottom: 48px;
+  }
+
   .section-features-item {
     width: calc((100% - 72px) / 4);
   }
@@ -986,18 +995,62 @@ textarea {
     padding-top: 120px;
     padding-bottom: 120px;
   }
-
-  .section-hero {
-    padding-top: 188px;
-    padding-bottom: 188px;
-    min-width: 1440px;
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/people-office.jpg);
+  .section-doing {
+    padding-bottom: 120px;
+    display: block;
   }
-  .section-hero-title {
-    margin-bottom: 48px;
+  .section-doing-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--basic-color);
+    margin-bottom: 72px;
+  }
+  .section-doing-list {
+    display: flex;
+    gap: 24px;
+  }
+  .section-doing-item {
+    width: calc((100% - 48px) / 3);
+  }
+  .section-doing-img {
+  }
+
+  .section-team > .container {
+    max-width: 1158px;
+  }
+
+  .section-team-list {
+    gap: 24px;
+  }
+
+  .section-team-item {
+    width: calc((100% - 72px) / 4);
+  }
+
+  .section-customers {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+
+  .section-customers-title {
+    color: var(--basic-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    margin-bottom: 72px;
+  }
+  .section-customers-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 16px;
+  }
+  .section-customers-item {
+    width: calc((100% - 16px) / 2);
+    height: 88px;
   }
 }
