--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: 1158px;
+  max-width: 426px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -207,8 +207,8 @@ ul {
 }
 .mob-menu-address-tel-link {
   font-weight: 600;
-  font-size: 36px;
-  line-height: calc(40 / 36);
+  font-size: 30px;
+  line-height: calc(40 / 30);
   color: var(--logo-color);
   font-style: normal;
   white-space: nowrap;
@@ -225,8 +225,8 @@ ul {
 }
 .mob-menu-icon-list {
   display: flex;
-  justify-content: center;
-  gap: 56px;
+  justify-content: space-between;
+  max-width: 328;
 }
 /* Hero-------- */
 
@@ -315,10 +315,9 @@ ul {
   line-height: calc(40 / 36);
   letter-spacing: 0.02em;
   color: var(--basic-color);
-  margin-top: 8px;
+  margin-top: 0px;
   margin-bottom: 8px;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 .section-features-text {
   font-weight: 500;
@@ -339,7 +338,7 @@ ul {
 
 /* Team-------- */
 .section-team > .container {
-  max-width: 290px;
+  max-width: 294px;
 }
 .section-team {
   background-color: var(--btn-background-color);
@@ -592,7 +591,6 @@ ul {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   min-width: 165px;
   height: 40px;
-  margin-left: 24px;
 }
 
 .subscribe-button:is(:hover, :focus) {
@@ -686,7 +684,6 @@ ul {
 .animation {
   position: relative;
   width: 100%;
-  height: 300px;
   overflow: hidden;
 }
 
@@ -737,6 +734,7 @@ ul {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: auto;
 }
 
 .is-hidden {
@@ -747,9 +745,9 @@ ul {
 
 .modal {
   position: absolute;
-  top: 50%;
+  top: 10%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, 0) scale(1);
   min-width: 320px;
   min-height: 576px;
   background-color: #fcfcfc;
@@ -880,6 +878,7 @@ textarea {
   line-height: calc(16 / 12);
   letter-spacing: 0.04em;
   color: #757575;
+  white-space: nowrap;
 }
 
 .policy-text {
@@ -897,6 +896,7 @@ textarea {
   fill: transparent;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  white-space: nowrap;
 }
 
 .checkbox:checked + .policy span {
@@ -946,6 +946,38 @@ textarea {
   }
   .portfolio-item {
     max-width: 100%;
+  }
+  .mob-menu-address-tel-link {
+    font-size: 36px;
+    line-height: calc(40 / 36);
+  }
+  .section-hero {
+    background-color: var(--basic-color);
+    padding-top: 112px;
+    padding-bottom: 108px;
+    text-align: center;
+    max-width: 1440px;
+    margin: 0 auto;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/bg-tab.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .section-hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/bg-tab2x.jpg);
+    }
   }
 }
 
@@ -1042,35 +1074,7 @@ textarea {
   }
   .section-features-subtitle {
     justify-content: flex-start;
-  }
-
-  .section-hero {
-    background-color: var(--basic-color);
-    padding-top: 112px;
-    padding-bottom: 108px;
-    text-align: center;
-    max-width: 768px;
-    margin: 0 auto;
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/bg-tab.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .section-hero {
-      background-image: linear-gradient(
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
-        url(../images/bg-tab2x.jpg);
-    }
+    display: flex;
   }
 
   .section-hero-title {
@@ -1128,6 +1132,10 @@ textarea {
     margin-bottom: 0;
     max-width: 264px;
   }
+
+  .subscribe-button {
+    margin-left: 24px;
+  }
   .footer-text {
     margin: 0;
   }
@@ -1148,6 +1156,10 @@ textarea {
   }
   .portfolio-item {
     max-width: 356px;
+  }
+  .modal {
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
   }
 }
 
@@ -1200,6 +1212,10 @@ textarea {
     margin: 0;
   }
 
+  .section-hero-title {
+    margin-bottom: 48px;
+  }
+
   .section-hero {
     background-color: var(--basic-color);
     padding-top: 188px;
@@ -1227,10 +1243,6 @@ textarea {
         ),
         url(../images/bg-des2x.jpg);
     }
-  }
-
-  .section-hero-title {
-    margin-bottom: 48px;
   }
 
   .section-features-item {
@@ -1337,6 +1349,10 @@ textarea {
   }
   .footer-list {
     display: flex;
+  }
+
+  .footer-tablet {
+    gap: 0;
   }
   .social {
     margin-left: 120px;
